--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(pacman VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick Network)
+find_package(Qt6 REQUIRED COMPONENTS Quick Network Quick3D Quick3DPhysics)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -32,7 +32,7 @@ set_target_properties(apppacman PROPERTIES
 )
 
 target_link_libraries(apppacman
-    PRIVATE Qt6::Quick Qt6::Network
+    PRIVATE Qt6::Quick Qt6::Network Qt::Quick3D Qt::Quick3DPhysics
 )
 
 include(GNUInstallDirs)
